--- a/style.css
+++ b/style.css
@@ -1,225 +1,348 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;900&display=swap");
 
 /*=============== VARIABLES CSS ===============*/
 :root {
-  --header-height: 3.5rem;
+    --header-height: 3.5rem;
 
-  /*========== Colors ==========*/
-  --hue: 14;
-  --first-color: hsl(var(--hue), 91%, 54%);
-  --first-color-alt: hsl(var(--hue), 91%, 50%);
-  --title-color: hsl(var(--hue), 4%, 100%);
-  --text-color: hsl(var(--hue), 4%, 85%);
-  --text-color-light: hsl(var(--hue), 4%, 55%);
+    /*========== Colors ==========*/
+    --hue: 14;
+    --first-color: hsl(var(--hue), 91%, 54%);
+    --first-color-alt: hsl(var(--hue), 91%, 50%);
+    --title-color: hsl(var(--hue), 4%, 100%);
+    --text-color: hsl(var(--hue), 4%, 85%);
+    --text-color-light: hsl(var(--hue), 4%, 55%);
 
-  /*Green gradient*/
-  --body-color: linear-gradient(90deg, hsl(104, 28%, 40%) 0%, hsl(58, 28%, 40%) 100%);
-  --container-color: linear-gradient(136deg, hsl(104, 28%, 35%) 0%, hsl(58, 28%, 35%) 100%);
-  
-  /*Red gradient*/
-  /* --body-color: linear-gradient(90deg, hsl(360, 28%, 40%) 0%, hsl(18, 28%, 40%) 100%);
+    /*Green gradient*/
+    --body-color: linear-gradient(
+        90deg,
+        hsl(104, 28%, 40%) 0%,
+        hsl(58, 28%, 40%) 100%
+    );
+    --container-color: linear-gradient(
+        136deg,
+        hsl(104, 28%, 35%) 0%,
+        hsl(58, 28%, 35%) 100%
+    );
+
+    /*Red gradient*/
+    /* --body-color: linear-gradient(90deg, hsl(360, 28%, 40%) 0%, hsl(18, 28%, 40%) 100%);
   --container-color: linear-gradient(136deg, hsl(360, 28%, 35%) 0%, hsl(18, 28%, 35%) 100%); */
 
-  /*Black solid*/
-  /* --body-color: hsl(30, 8%, 8%);
+    /*Black solid*/
+    /* --body-color: hsl(30, 8%, 8%);
   --container-color: hsl(30, 8%, 10%); */
 
-  /*========== Font and typography ==========*/
-  --body-font: 'Poppins', sans-serif;
-  --biggest-font-size: 2rem;
-  --h1-font-size: 1.5rem;
-  --h2-font-size: 1.25rem;
-  --h3-font-size: 1rem;
-  --normal-font-size: .938rem;
-  --small-font-size: .813rem;
-  --smaller-font-size: .75rem;
+    /*========== Font and typography ==========*/
+    --body-font: "Poppins", sans-serif;
+    --biggest-font-size: 2rem;
+    --h1-font-size: 1.5rem;
+    --h2-font-size: 1.25rem;
+    --h3-font-size: 1rem;
+    --normal-font-size: 0.938rem;
+    --small-font-size: 0.813rem;
+    --smaller-font-size: 0.75rem;
 
-  /*========== Font weight ==========*/
-  --font-medium: 500;
-  --font-semi-bold: 600;
-  --font-black: 900;
+    /*========== Font weight ==========*/
+    --font-medium: 500;
+    --font-semi-bold: 600;
+    --font-black: 900;
 
-  /*========== Margenes Bottom ==========*/
-  --mb-0-25: .25rem;
-  --mb-0-5: .5rem;
-  --mb-0-75: .75rem;
-  --mb-1: 1rem;
-  --mb-1-5: 1.5rem;
-  --mb-2: 2rem;
-  --mb-2-5: 2.5rem;
+    /*========== Margenes Bottom ==========*/
+    --mb-0-25: 0.25rem;
+    --mb-0-5: 0.5rem;
+    --mb-0-75: 0.75rem;
+    --mb-1: 1rem;
+    --mb-1-5: 1.5rem;
+    --mb-2: 2rem;
+    --mb-2-5: 2.5rem;
 
-  /*========== z index ==========*/
-  --z-tooltip: 10;
-  --z-fixed: 100;
+    /*========== z index ==========*/
+    --z-tooltip: 10;
+    --z-fixed: 100;
 }
 /* Responsive typography */
 @media screen and (min-width: 992px) {
     :root {
-      --biggest-font-size: 4rem;
-      --h1-font-size: 2.25rem;
-      --h2-font-size: 1.5rem;
-      --h3-font-size: 1.25rem;
-      --normal-font-size: 1rem;
-      --small-font-size: .875rem;
-      --smaller-font-size: .813rem;
+        --biggest-font-size: 4rem;
+        --h1-font-size: 2.25rem;
+        --h2-font-size: 1.5rem;
+        --h3-font-size: 2rem;
+        --normal-font-size: 1rem;
+        --small-font-size: 0.875rem;
+        --smaller-font-size: 0.813rem;
     }
-  }
-  
-  /*=============== BASE ===============*/
-  *{
+}
+
+/*=============== BASE ===============*/
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-  }
-  
-  html{
+}
+
+html {
     scroll-behavior: smooth;
-  }
-  
-  body{
+}
+
+body {
     margin: var(--header-height) 0 0 0;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     background: var(--body-color);
     color: var(--text-color);
-  }
-  
-  h1,h2,h3,h4{
+}
+
+h1,
+h2,
+h3,
+h4 {
     color: var(--title-color);
     font-weight: var(--font-semi-bold);
-  }
-  
-  ul{
+}
+
+ul {
     list-style: none;
-  }
-  
-  a{
+}
+
+a {
     text-decoration: none;
-  }
-  
-  img{
+}
+
+img {
     max-width: 100%;
     height: auto;
-  }
-  
-  button,
-  input{
+}
+
+button,
+input {
     border: none;
     outline: none;
-  }
-  
-  button{
+}
+
+button {
     cursor: pointer;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
-  }
-  
-  /*=============== REUSABLE CSS CLASSES ===============*/
-  .section{
+}
+
+/*=============== REUSABLE CSS CLASSES ===============*/
+.section {
     padding: 4.5rem 0 2rem;
-  }
-  
-  .section__title{
+}
+
+.section__title {
     font-size: var(--h2-font-size);
     margin-bottom: var(--mb-2);
     text-align: center;
-  }
-  
-  /*=============== LAYOUT ===============*/
-  .container{
+}
+
+/*=============== LAYOUT ===============*/
+.container {
     max-width: 968px;
-    margin-left: var(--mb-1-5); 
-    margin-right: var(--mb-1-5);
-  }
-  
-  .grid{
+    margin: auto;
+}
+
+.grid {
     display: grid;
-  }
-  
-  .main{
+}
+
+.main {
     overflow: hidden; /*For animation*/
-  }
-  
+}
 
-.home__content{
-        row-gap: 1rem;
-    }
-.home__group{
-        display: grid;
-        position: relative;
-        padding-top: 2rem;
-    }
-.home__img{
-        height: 250px;
-        justify-self: center;
-    }
-.home__indicator{
-        width: 8px;
-        height: 8px;
-        background-color: var(--title-color);
-        border-radius: 50%;
-        position: absolute;
-        top: 7rem;
-        right: 2rem; 
-    }
+.home__content {
+    row-gap: 1rem;
+}
+.home__group {
+    display: grid;
+    position: relative;
+    padding-top: 2rem;
+}
+.home__img {
+    height: 250px;
+    justify-self: center;
+}
+.home__indicator {
+    width: 8px;
+    height: 8px;
+    background-color: var(--title-color);
+    border-radius: 50%;
+    position: absolute;
+    top: 7rem;
+    right: 2rem;
+}
 
-.home__indicator::after{
-            content: '';
-            position: absolute;
-            width: 1px;
-            height: 48px;
-            background-color: var(--title-color);
-            top: -3rem;
-            right: 45%;
-        }
-.home____details-img{
-            position: absolute;
-            right: .5rem;
-        }
+.home__indicator::after {
+    content: "";
+    position: absolute;
+    width: 1px;
+    height: 48px;
+    background-color: var(--title-color);
+    top: -3rem;
+    right: 45%;
+}
+.home____details-img {
+    position: absolute;
+    right: 0.5rem;
+}
 .home____details-title,
-.home____details-subtitle{
-            display: block;
-            font-size: var(--small-font-size);
-            text-align: right;
-        }
-.home__subtitle{
-        font-size: var(--h3-font-size);
-        text-transform: uppercase;
-        margin-bottom: var(--mb-1);
-    }
-.home__title{
-        font-size: var(--biggest-font-size);
-        font-weight: var(--font-black);
-        line-height: 109%;
-        margin-bottom: var(--mb-1);
-    }
-.home__description{
-        margin-bottom: var(--mb-1);
-    }
-.home__buttons{
-        display: flex;
-        justify-content: space-between;
-    }
+.home____details-subtitle {
+    display: block;
+    font-size: var(--small-font-size);
+    text-align: right;
+}
+.home__subtitle {
+    font-size: var(--h3-font-size);
+    text-transform: uppercase;
+    margin-bottom: var(--mb-1);
+}
+.home__title {
+    font-size: var(--biggest-font-size);
+    font-weight: var(--font-black);
+    line-height: 109%;
+    margin-bottom: var(--mb-1);
+}
+.game-contents-wrapper {
+    display: flex;
+}
+.game__title {
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+}
 
-.swiper-pagination{
-        position: initial;
-        margin-top: var(--mb-1);
-        text-align: center
-      }
-      
-.swiper-pagination-bullet{
-        width: 5px;
-        height: 5px;
-        background-color: var(--title-color);
-        opacity: 1;
-      }
-      
-.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet{
-        margin: 0 .5rem;
-      } 
-      
-.swiper-pagination-bullet-active{
-        width: 1.5rem;
-        height: 5px;
-        border-radius: .5rem;
-      }
+.game-image-box {
+    display: flex;
+    width: 160px;
+    height: 430px;
+    padding: 12px;
+    transition: 0.3s ease-in-out;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-right: 12px;
+    border-top-right-radius: 30px;
+}
+.game-image-box h4 {
+    color: #fff;
+    font-size: 14px;
+    line-height: 20px;
+    padding-bottom: 4px;
+    border-bottom: 1px solid;
+}
+
+.game-image-box p {
+    color: #fff;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.game-image-box:hover {
+    margin-bottom: 20px;
+}
+.bg-purple {
+    background: linear-gradient(180deg, rgba(248, 207, 163, 0.8) 0%, #F0716B 90.62%);
+}
+.bg-pumpkin {
+    background: linear-gradient(180deg, #fc8c09 0%, rgba(46, 25, 139, 0.8) 88.02%);
+}
+.bg-black {
+    background: linear-gradient(180deg, rgba(248, 207, 163, 0.8) 0%, #F0716B 90.62%);
+}
+.bg-green {
+    background: linear-gradient(180deg, #fc8c09 0%, rgba(46, 25, 139, 0.8) 88.02%);
+}
+.bg-yellow{
+  background: linear-gradient(180deg, rgba(248, 207, 163, 0.8) 0%, #F0716B 90.62%);
+}
+.game-image-box:hover {
+    margin-top: -30px;
+}
+.game-image-box img {
+    width: 100%;
+    /* height: 100%; */
+    max-height: 300px;
+    border-radius: 4px;
+}
+.game-image-wrapper {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.home__description {
+    margin-bottom: var(--mb-1);
+}
+.home__buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.swiper-pagination {
+    position: initial;
+    margin-top: var(--mb-1);
+    text-align: center;
+}
+
+.swiper-pagination-bullet {
+    width: 5px;
+    height: 5px;
+    background-color: var(--title-color);
+    opacity: 1;
+}
+
+.swiper-pagination-horizontal.swiper-pagination-bullets
+    .swiper-pagination-bullet {
+    margin: 0 0.5rem;
+}
+
+.swiper-pagination-bullet-active {
+    width: 1.5rem;
+    height: 5px;
+    border-radius: 0.5rem;
+}
+
+.message_ {
+    font-size: var(--h1-font-size);
+    color: white;
+    font-weight: bold;
+}
+
+.message {
+    margin-top: 80px;
+    height : 400px;
+    width : 800px;
+    margin-left : 10px;
+}
+
+#main_form {
+    display :flex;
+    align-items: center;
+    margin-top: 20px;
+    margin-left : 10px;
+}
+
+#content {
+    height : 80px;
+    width : 600px;
+    border-radius: 30px;
+    resize : none;
+    padding : 20px;
+    box-shadow: 2px 4px 16px #fc8c09;
+}
+
+#message_button {
+    margin-left: 10px;
+    padding: 16px 20px;
+    text-align : center;
+    border-radius: 10px;
+    color: white;
+    font-weight:bold;
+    font-size: 16px;
+}
+#message_button:hover{
+    cursor: pointer;
+    background-color: #dc7500;
+}
+.bg-orange{
+    background-color: #fc8c09;
+}
